--- a/templates/forms/new_wellbeing.html
+++ b/templates/forms/new_wellbeing.html
@@ -163,8 +163,7 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
                 <h4 class="panel-title"> Adult and Child Wellbeing Assessment </h4>
             </div>
             <div class="panel-body">
-                <form class="form-horizontal form-bordered" action="." method="POST" data-parsley-validate="true"
-                      name="form-wizard-hhva" id="new_hhva">
+                <form class="form-horizontal form-bordered" action="." method="POST" data-parsley-validate="true" name="form-wizard-hhva" id="new_hhva">
                     {% csrf_token %}
 
                     <div id="wizard-hhva">
