--- a/templates/menus.html
+++ b/templates/menus.html
@@ -60,6 +60,7 @@
 				    <span>OVC Reports</span>
 				</a>
 				<ul class="sub-menu">
+                    <li><a href="{% url 'pivot_ovc_reports' %}">DATIM MER</a></li>
 					<li><a href="{% url 'pivot_ovc_reports' %}">DATIM MER ver 2.3</a></li>
 					<li><a href="{% url 'pivot_ovc_pepfar' %}">Services by Domain (PEPFAR Summary)</a></li>
 					<li><a href="{% url 'pivot_ovc_kpi' %}">Key Performance Indicator</a></li>
@@ -77,11 +78,11 @@
 					<li><a href="{% url 'reports_ovc' id=11 %}">Form1B summary</a></li>
 					<li><a href="{% url 'reports_ovc' id=10 %}">Needs vs Served by domain</a></li>
 					<li><a href="{% url 'reports_ovc' id=15 %}">OVC Overall View</a></li>
-                    <li><a href="{% url 'reports_ovc' id=15 %}">CPARA</a></li>
-                    <li><a href="{% url 'reports_ovc' id=15 %}">Case Plans</a></li>
+                    <li><a href="{% url 'reports_ovc' id=17 %}">CPARA</a></li>
+                    <li><a href="{% url 'reports_ovc' id=18 %}">Case Plans</a></li>
                     <li><a href="{% url 'reports_ovc' id=15 %}">Case Plan Monitoring</a></li>
-                    <li><a href="{% url 'reports_ovc' id=15 %}">Serverd two quaters</a></li>
-                    <li><a href="{% url 'reports_ovc' id=15 %}">Benchmarks</a></li>
+                    <li><a href="{% url 'reports_ovc' id=19 %}">Serverd two quaters</a></li>
+                    <li><a href="{% url 'reports_ovc' id=20 %}">Benchmarks</a></li>
 				</ul>
 			</li>
 		</ul>
