--- a/templates/afc/new_form_4A.html
+++ b/templates/afc/new_form_4A.html
@@ -70,6 +70,7 @@ form#new-form-b ul {
                     <input type="hidden" name="form_id" value="{{ form_id }}">
                     <input type="hidden" name="case_id" value="{{ case.case_id }}">
                     <input type="hidden" name="person_id" value="{{ case.person.id }}">
+                    <input type="hidden" name="care_id" value="{{ case.care_id }}">
                     <div class="form-group">
                         <label class="col-md-2 control-label">Child Names</label>
                         <div class="col-md-3">
@@ -89,28 +90,96 @@ form#new-form-b ul {
                         <div class="col-md-3">{{ case.person.age }}</div>
                         <div class="col-md-1"></div>
                     </div>
-                    
+                    <hr>
+                    {% if cid == 'CA' %}
+                    <!-- Adoption -->
                     <div class="form-group">
-                        <label class="col-md-2 control-label">Date</label>
+                        <label class="col-md-4 control-label">Matching done(Y/N) {{ cid }}</label>
                         <div class="col-md-2">
-                            {{ form.consent_date }}
+                            {{ form.qf4A1_rdo }}
+                            <span id="qf4A1_rdo_error"></span>
                         </div>
-                        <div class="col-md-4">
-                        </div>
+                        <label class="col-md-3 control-label"></label>
+                        <div class="col-md-2"></div>
+                        <div class="col-md-1"></div>
                     </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Children placed for bonding (Y/N)</label>
+                        <div class="col-md-2">
+                            {{ form.qf4A1_rdo }}
+                            <span id="qf4A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-3 control-label"></label>
+                        <div class="col-md-2"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    {% elif cid == 'FC' %}
+                    <!-- Foster Care -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Planned home visits for the emergency foster (within the one month)</label>
+                        <div class="col-md-2">
+                            {{ form.qf4A1_rdo }}
+                            <span id="qf4A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-3 control-label"></label>
+                        <div class="col-md-2"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    {% endif %}
                     
+                    <fieldset>
+                        <legend class="pull-left width-full">Goals By Domain</legend>
+
+                        <div class="form-group">
+                        <label class="col-md-2 control-label">Case Plan Date</label>
+                        <div class="col-md-2">
+                            {{ form.event_date }}
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
+
+                        <div class="form-group">
+                            <div class="col-md-2"><b>Domain</b></div>
+                            <div class="col-md-3"><b>Goals</b></div>
+                            <div class="col-md-3"><b>Needs</b></div>
+                            <div class="col-md-2"><b>Proposed actions</b></div>
+                            <div class="col-md-2"><b>Deadline</b></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-2">{{ form.qf4A1 }}</div>
+                            <div class="col-md-3">{{ form.qf4A2 }}</div>
+                            <div class="col-md-3">{{ form.qf4A3 }}</div>
+                            <div class="col-md-2"></div>
+                            <div class="col-md-2"></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-2"><b>Responsible</b></div>
+                            <div class="col-md-2"><b>Completed</b></div>
+                            <div class="col-md-2"><b>Not Completed(explain)</b></div>
+                            <div class="col-md-2"><b>New action</b></div>
+                            <div class="col-md-2"></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-2">{{ form.qf4A1 }}</div>
+                            <div class="col-md-3">{{ form.qf4A7_rdo }}</div>
+                            <div class="col-md-3">{{ form.qf4A3 }}</div>
+                            <div class="col-md-2"></div>
+                            <div class="col-md-2"></div>
+                        </div>
+                    </fieldset>
+                          
                     
                     <div class="form-group">
                         <label class="col-md-2 control-label"></label>
                         <div class="col-md-3">
                             <button type="submit" class="btn btn-sm btn-success">Submit Form {{ form_id }} details</button>
                         </div>
+                        <div class="col-md-7"></div>
                     </div>
                 </form>
             </div>
         </div>
-        <!-- end panel -->
-    </div>
     
 </div>
 <!-- end row -->
@@ -122,7 +191,7 @@ form#new-form-b ul {
 
 <script>
 $(document).ready(function() {
-    $('#consent_date').datepicker({ endDate: '0y', format: 'dd-M-yyyy' });
+    $('#event_date').datepicker({ endDate: '0y', format: 'dd-M-yyyy' });
 });
 
 </script>
