--- a/templates/afc/new_form_5A.html
+++ b/templates/afc/new_form_5A.html
@@ -70,6 +70,7 @@ form#new-form-b ul {
                     <input type="hidden" name="form_id" value="{{ form_id }}">
                     <input type="hidden" name="case_id" value="{{ case.case_id }}">
                     <input type="hidden" name="person_id" value="{{ case.person.id }}">
+                    <input type="hidden" name="care_id" value="{{ case.care_id }}">
                     <div class="form-group">
                         <label class="col-md-2 control-label">Child Names</label>
                         <div class="col-md-3">
@@ -89,19 +90,206 @@ form#new-form-b ul {
                         <div class="col-md-3">{{ case.person.age }}</div>
                         <div class="col-md-1"></div>
                     </div>
-                    
+                    <hr>
+
                     <div class="form-group">
-                        <label class="col-md-2 control-label">Date</label>
+                        <label class="col-md-4 control-label">Place where process is being conducted</label>
+                        <div class="col-md-2"></div>
+                        <label class="col-md-2 control-label">Authorizing person</label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Legal status of current care (committed).</label>
                         <div class="col-md-2">
-                            {{ form.consent_date }}
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
                         </div>
-                        <div class="col-md-4">
+                        <label class="col-md-2 control-label">Committial Revoked</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
                         </div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Committal Expired</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Reason why this care is the most appropriate care alternative</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Specify the resources or assistance to be offered to the child/young adult</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label">Responsible person</label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Review Date</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <!-- End kafaalah -->
+
+                    <!-- Start Kinship -->
+                    
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Name of caregiver giving authority of care to kinship</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Details of kinship parents receiving the child</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Contact details</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label">County</label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Is the child leaving a CCI? </label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label">CCI name</label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">CCI contact</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <!-- SIL Start -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">If not in CCI, choose the type of current care</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Persons responsible in supporting the young adult have reviewed the case plan and agree to their respective roles contained within the case plans</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Mentor names</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label">Contact</label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Gender</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <!-- Start SCHH -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">HH Location</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Reasons for placing child(ren)/young adult under this care (tick all that apply):</label>
+                        <div class="col-md-2">
+                            {{ form.qf5A1_rdo }}
+                            <span id="qf2A1_rdo_error"></span>
+                        </div>
+                        <label class="col-md-2 control-label"></label>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
                     </div>
                     
                     
                     <div class="form-group">
-                        <label class="col-md-2 control-label"></label>
+                        <label class="col-md-4 control-label">Placement Date</label>
+                        <div class="col-md-2">
+                            {{ form.event_date }}
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
+                    
+                    
+                    <div class="form-group">
+                        <label class="col-md-4 control-label"></label>
                         <div class="col-md-3">
                             <button type="submit" class="btn btn-sm btn-success">Submit Form {{ form_id }} details</button>
                         </div>
