--- a/templates/afc/view_alternative_care.html
+++ b/templates/afc/view_alternative_care.html
@@ -27,7 +27,7 @@
 <!-- begin breadcrumb -->
 <ol class="breadcrumb pull-right">
 	<li><a href="#">Home</a></li>
-	<li class="active">CTiP</li>
+	<li class="active">Alternative Care</li>
 </ol>
 <!-- end breadcrumb -->
 <!-- begin page-header -->
@@ -62,7 +62,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='1B' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.1B > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F1 - Child Assessment Form</div></a>
                 </td>
             </tr>
@@ -70,7 +70,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='2A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.2A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F2 - Family Assessment Form</div></a>
                 </td>
             </tr>
@@ -78,15 +78,15 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='3A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
-                    <div class="m-t-4">F3 - Caregiver Consent</div></a>
+                    <span class="badge pull-right">{% if events.3A > 0 %}Y{% else %}N{% endif %}</span>
+                    <div class="m-t-4">F3 - Consent Forms</div></a>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='3B' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.3B > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F3 - Child Assent Forms</div></a>
                 </td>
             </tr>
@@ -94,7 +94,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='4A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.4A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F4 - Case Plan</div></a>
                 </td>
             </tr>
@@ -102,7 +102,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='5A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.5A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F5 - Placement Form</div></a>
                 </td>
             </tr>
@@ -110,7 +110,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='6A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.1A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F6 : Monitoring Form</div></a>
                 </td>
             </tr>
@@ -119,7 +119,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='7A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.7A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F7 : Child and Caregiver Case Review Form</div></a>
                 </td>
             </tr>
@@ -127,7 +127,7 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='8A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file-o fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.8A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F8 : Young Adult Case Review Form</div></a>
                 </td>
             </tr>
@@ -135,8 +135,37 @@
                 <td>
                     <a href="{% url 'alt_care_form' cid=cid form_id='9A' case_id=case.case_id|stringformat:'s' %}">
                     <i class="fa fa-file fa-1x pull-left fa-fw m-t-4"></i>
-                    <span class="badge pull-right">{% if case.has_consent %}Y{% else %}N{% endif %}</span>
+                    <span class="badge pull-right">{% if events.9A > 0 %}Y{% else %}N{% endif %}</span>
                     <div class="m-t-4">F9 : Case closure</div></a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <br><b>Other Forms</b>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="{% url 'alt_care_form' cid=cid form_id='10A' case_id=case.case_id|stringformat:'s' %}">
+                    <i class="fa fa-file fa-1x pull-left fa-fw m-t-4"></i>
+                    <span class="badge pull-right">{% if events.10A > 0 %}Y{% else %}N{% endif %}</span>
+                    <div class="m-t-4">Case Transfer Form</div></a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="{% url 'alt_care_form' cid=cid form_id='12A' case_id=case.case_id|stringformat:'s' %}">
+                    <i class="fa fa-file fa-1x pull-left fa-fw m-t-4"></i>
+                    <span class="badge pull-right">{% if events.12A > 0 %}Y{% else %}N{% endif %}</span>
+                    <div class="m-t-4">Referral Form</div></a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="{% url 'alt_care_form' cid=cid form_id='14A' case_id=case.case_id|stringformat:'s' %}">
+                    <i class="fa fa-file fa-1x pull-left fa-fw m-t-4"></i>
+                    <span class="badge pull-right">{% if events.14A > 0 %}Y{% else %}N{% endif %}</span>
+                    <div class="m-t-4">Disability Assessment Form</div></a>
                 </td>
             </tr>
             
@@ -174,7 +203,7 @@
                     <thead>
                         <tr>
                             <th></th>
-                            <th>
+                            <th colspan="3">
                                 <h4>{{ case.person.first_name }} {{ case.person.surname }} <small>DoB: {{ case.person.date_of_birth }} ({{ case.person.age }})</small></h4>
                             </th>
                         </tr>
@@ -182,37 +211,39 @@
                     <tbody>
                         <tr class="highlight">
                             <td class="field">Bio Data</td>
-                            <td></td>
+                            <td colspan="3"></td>
                         </tr>
                         <tr class="divider">
-                            <td colspan="2"></td>
+                            <td colspan="4"></td>
                         </tr>
                         <tr>
                             <td class="field">Sex</td>
                             <td>{{ case.person.sex_id|gen_value:vals }}</td>
-                        </tr>
-                        <tr>
                             <td class="field">DoB</td>
                             <td>{{ case.person.date_of_birth }} (Actual / Estimated)</td>
                         </tr>
                         <tr class="highlight">
                             <td class="field">Case Data</td>
-                            <td></td>
+                            <td colspan="3"></td>
                         </tr>
                         <tr>
                             <td class="field">Care Option</td>
-                            <td>{{ case.care_type|gen_value:vals }}</td>
+                            <td colspan="3">{{ case.care_type|gen_value:vals }}</td>
+                        </tr>
+                        <tr>
+                            <td class="field">Reason(s)</td>
+                            <td colspan="3"></td>
                         </tr>
                         <tr>
                             <td class="field">Date</td>
-                            <td>{{ case.case_date }}</td>
+                            <td colspan="3">{{ case.case_date }}</td>
                         </tr>
                         <tr class="divider">
-                            <td colspan="2"></td>
+                            <td colspan="4"></td>
                         </tr>
                         <tr class="highlight">
                             <td class="field"></td>
-                            <td>
+                            <td colspan="3">
                                 <a href="{% url 'edit_alt_care' case_id=case.case_id|stringformat:'s' %}" class="btn btn-sm btn-primary m-r-5 btnNewcase"><i class="fa fa-pencil m-r-5"></i> Edit Care details</a>
                             </td>
                         </tr>
